# AI-Investment-Analysis-Agent

./: .gitignore  README.md  cache.py  debate_graph.py  graph.py  list_models.py  main.py  next.config.js  package.json  pyproject.toml  render-build.sh  requirements.txt  test_agents.py  test_groq_models.py  vercel.json
api/: index.py
app/: globals.css  layout.jsx  page.jsx
langchain/: data_extraction.ipynb  langchainintro.ipynb
langchain/.ipynb_checkpoints/: langchainintro-checkpoint.ipynb
