[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "mcp[cli]>=1.28.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "langgraph>=0.2.14",
]
