[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "langgraph>=0.2.14",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
